fixed intra bug: give up button stretches project page outside of boundaries

--- a/dark.css
+++ b/dark.css
@@ -333,6 +333,10 @@ mark, .mark {
 	border-color: #4a4a4a !important;
 }
 
+.team-actions .btn.btn-block.btn-danger {
+	white-space: normal !important;
+}
+
 /* events */
 .event-subname {
 	color: #adadad !important;
